--- a/RateLimitingMiddleware/RateLimitingMiddleware.csproj
+++ b/RateLimitingMiddleware/RateLimitingMiddleware.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="RockLib.Configuration.ObjectFactory" Version="2.0.2" />
   </ItemGroup>
 
 </Project>
