Use the buckets to consume the tokens

--- a/RateLimitingDemo/appsettings.json
+++ b/RateLimitingDemo/appsettings.json
@@ -12,17 +12,17 @@
   "RateLimitingRules": {
     "IpRules": [
       {
-        "Ip": "192.168.0.1",
+        "Ip": "::1",
         "Rules": [
           {
-            "EndPoint": "WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
-            "Method": "Get",
-            "Period": "60000", // Should be in milliseconds
-            "Limit": "6"
+            "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
+            "Method": "GET",
+            "Period": "5000", // Should be in milliseconds
+            "Limit": "2"
           },
           {
-            "EndPoint": "WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
-            "Method": "Post",
+            "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
+            "Method": "POST",
             "Period": "60000", // Should be in milliseconds
             "Limit": "3"
           }
@@ -32,14 +32,14 @@
         "Ip": "192.168.0.111",
         "Rules": [
           {
-            "EndPoint": "WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
-            "Method": "Get",
+            "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
+            "Method": "GET",
             "Period": "60000", // Should be in milliseconds
             "Limit": "6"
           },
           {
-            "EndPoint": "WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
-            "Method": "Post",
+            "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
+            "Method": "POST",
             "Period": "60000", // Should be in milliseconds
             "Limit": "3"
           }
