add http response and change time from ms to sec

--- a/RateLimitingDemo/appsettings.json
+++ b/RateLimitingDemo/appsettings.json
@@ -17,13 +17,13 @@
           {
             "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
             "Method": "GET",
-            "Period": "5000", // Should be in milliseconds
+            "Period": "5", // Should be in seconds
             "Limit": "2"
           },
           {
             "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
             "Method": "POST",
-            "Period": "60000", // Should be in milliseconds
+            "Period": "60", // Should be in seconds
             "Limit": "3"
           }
         ]
@@ -34,13 +34,13 @@
           {
             "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
             "Method": "GET",
-            "Period": "60000", // Should be in milliseconds
+            "Period": "5", // Should be in seconds
             "Limit": "6"
           },
           {
             "EndPoint": "/WeatherForecast", //We can use wild card or regex but for now we use hard code endpoint
             "Method": "POST",
-            "Period": "60000", // Should be in milliseconds
+            "Period": "3", // Should be in seconds
             "Limit": "3"
           }
         ]
